--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Mecht.Ai",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "homepage": "https://Mecht.Ai.com",
   "dependencies": {
@@ -56,8 +56,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postbuild": "react-snap"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
