--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Mecht.Ai",
   "version": "1.2.0",
   "private": true,
-  "homepage": "https://Mecht.Ai.com",
+  "homepage":  "{https://master.d9b3kiqxmqv7b.amplifyapp.com}/#/",
   "dependencies": {
     "@iconscout/react-unicons": "^1.1.5",
     "aos": "^2.3.4",
