--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "Mecht.Ai",
   "version": "1.2.0",
+  "homepage": "{Amplify-URL}/#/",
   "private": true,
   "dependencies": {
     "@iconscout/react-unicons": "^1.1.5",
