--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Mecht.Ai",
   "version": "1.3.0",
-  "homepage": ".",
+  "homepage": "https://master.d9b3kiqxmqv7b.amplifyapp.com/",
   "private": true,
   "dependencies": {
     "@iconscout/react-unicons": "^1.1.5",
